--- a/templates/goals.html
+++ b/templates/goals.html
@@ -8,7 +8,7 @@
     <!-- 引入 echarts.js -->
 
     <link rel="icon" href="https://photosfor2018.oss-cn-hangzhou.aliyuncs.com/dreamforfuture.png">
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="/v1/jquery.js"></script>
     <script src="/v1/echart.js"></script>
     <!-- <script src="https://cdn.bootcss.com/echarts/4.2.1/echarts-en.common.js"></script> -->
     <!-- <script src="https://cdn.bootcss.com/echarts/4.0.2/echarts-en.common.js"></script> -->
