--- a/templates/goallist.html
+++ b/templates/goallist.html
@@ -109,7 +109,7 @@ getgoallist()
         console.log(`目标里面任务的长度为${goals[i].Alltasksingoal.length}`)
       while (j<goals[i].Alltasksingoal.length){
        tasksingoalhtml =  tasksingoalhtml + `<li><input type="checkbox" id= ${goals[i].Alltasksingoal[j].ID} onchange="add2tasksidarray(this.id)" class = "checkbox" id="scales" name="scales"
-  ><a> ${goals[i].Alltasksingoal[j].task}</a></li>`
+  ><a> ${goals[i].Alltasksingoal[j].task}<input type="image" src="https://test-1255367272.cos.ap-chengdu.myqcloud.com/plus.svg" alt="Submit" width="12" height="12"><input type="image" src="https://test-1255367272.cos.ap-chengdu.myqcloud.com/cancel.svg" alt="Submit" width="12" height="12"></a></li>`
        console.log(`目标里面任务的长度为${goals[i].Alltasksingoal.length}`)
        j++ 
       }
