task manager version of sonchild  task

--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -1701,7 +1701,7 @@ $(document).on("mouseover","#task_reviewalgo_selector",function(){
     //   var updatedtask = $("#updatedtask").val()
     //   var taskid = $("#taskid").val()
     //   alert(taskid)
-
+//add
     //   var updatedinfo =
     //   // {"inbox":"we am creating task","client":"gtdcli","goalcode":"aaa","tasktags":{"importanttag":"yes"},"parentid":"unspecified"}
     //   {
