--- a/templates/goallist.html
+++ b/templates/goallist.html
@@ -70,7 +70,7 @@ $(document).ready(function(){
   <script>
 
 
-getgoallist()
+   getgoallist()
 
     var   taskids = [];
     function add2tasksidarray(taskid){
@@ -99,7 +99,7 @@ getgoallist()
      
       var head = '<h1 style="color:blue;">Today tasks</h1><ul class="tree">'
        var  tail = '</ul>'
-       var  goalisthtml = '<button onclick="giveuptasks()">batch abandon tasks</button>'
+       var  goalisthtml = '<button onclick="giveuptasks()">batch abandon</button><button onclick="tomorrowtasks()">tomorrow batch</button>'
       while (i<goals.length)
     {
        var goaltitle = '<h5 style="color:blue;">'+goals[i].Name+'<h5>'
@@ -130,6 +130,7 @@ $('.checkbox').hide();
    
     function giveuptasks(){
       console.log(`任务数组的长度为${taskids.length}`)
+      
       if (taskids.length ==0){
       
         $('.checkbox').show();
@@ -166,6 +167,43 @@ $('.checkbox').hide();
     }
 
 
+
+    function tomorrowtasks(){
+      console.log(`任务数组的长度为${taskids.length}`)
+      if (taskids.length ==0){
+      
+        $('.checkbox').show();
+      }
+      if (taskids.length >0){
+        $('.checkbox').hide();
+        var updatedtask = $("#updatedtask").val()
+   
+
+      var info =
+      // {"inbox":"we am creating task","client":"gtdcli","goalcode":"aaa","tasktags":{"importanttag":"yes"},"parentid":"unspecified"}
+      {
+        'tomorrowtaskids':taskids,
+      }
+
+      $.ajax({
+        type: "POST",
+        url: "/v1/tomorrowtasksbatch",
+        // The key needs to match your method's input parameter (case-sensitive).
+        data: JSON.stringify(info),
+        contentType: "application/json; charset=utf-8",
+        dataType: "json",
+        success: function (data) { 
+          taskids = []
+          // alert(data);
+         },
+        failure: function (errMsg) {
+          alert(errMsg);
+        }
+      })
+       
+      }
+
+    }
 
 
 
