--- a/static/css/taskmanage.css
+++ b/static/css/taskmanage.css
@@ -36,11 +36,78 @@ body {
     /* 这里10em不起作用的原因是系统有一个预设的css，我不知道怎么禁用它 */
   }
 
+
+
+/* 下面是把页面分成两栏的css,需要配合JS使用 */
+  div,body,html{
+    margin:0; 
+    padding:0; 
+    /* width:100%; */
+  }
+  #left,#right,#middle{
+     height:10000px; 
+     position:absolute;
+    }
+  #left{
+    width:300px; 
+    /* background:#ccc; */
+  }
+  #middle{ 
+    width:9px; 
+    background:#666;
+    left:300px;
+  }
+  #middle:hover{ 
+    cursor:w-resize;
+  }
+  #right{
+    right:0; 
+    background:#ccc; 
+    left:309px; 
+    width:auto;
+  }
+
+/* 任务编辑区 */
+.right_shown_area{
+  margin-left: 10em;
+}
+
+#today_task_area{
+  /* display: inline-block; */
+  /* border: #ddd solid; */
+  /* float: left; */
+  /* max-width: 20em; */
+  /* min-width: 20em; */
+}
+
+#all_unfinished_task_shown_area{
+  /* display: inline-block; */
+  /* float: right; */
+  /* max-width: 20em; */
+}
+
+
+
+.goal_manager,.today_tasks {
+  border: solid #db4c3f 0.1em;
+  padding: 0.2em;
+  margin: 0.2em;
+}
+.goal_manager:hover,.today_tasks:hover{
+  cursor: pointer;
+} 
+
+.list::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+  background-color: #aaa; /* or add it to the track */
+}
+
 /* 每一个项目的css */
 .section{
   max-width: 30em;
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto; */
+  margin-left: 0;
 }
 
 .project_area{
@@ -48,55 +115,7 @@ body {
   
 }
 
-/* 任务完成的圆圈css */
 
-.round {
-  position: relative;
-}
-
-.round label {
-  background-color: #fff;
-  border: .07em solid #ccc;
-  border-radius: 50%;
-  cursor: pointer;
-  height: 1em;
-  width: 1em;
-  /* height和width调节圆圈的大小 */
-  left: 0;
-  /* left调节圆圈的左右位置，可以用负值 */
-  top: 0.2em;
-  /* top调节圆圈的上下位置，可以用负值 */
-  position: absolute;
-}
-
-.round label:after {
-  border: .125em solid #fff;
-  border-top: none;
-  border-right: none;
-  content: "";
-  height: .3em;
-  width: .6em;
-  /* height和width调节对勾的大小  */
-  left: .18em;
-  top: .2em;
-  /* top调节对勾的上下位置，可以用负值 */
-  opacity: 0;
-  position: absolute;
-  transform: rotate(-45deg);
-}
-
-.round input[type="checkbox"] {
-  visibility: hidden;
-}
-
-.round input[type="checkbox"]:checked + label {
-  background-color: #66bb6a;
-  border-color: #66bb6a;
-}
-
-.round input[type="checkbox"]:checked + label:after {
-  opacity: 1;
-}
 
 /* 输入完成的任务的css */
 
@@ -158,7 +177,8 @@ body {
 /* 下面是输入任务框体的css */
 
 .add_task_area{
-  max-width: 30em;
+  /* max-width: 30em; */
+  /* margin-left: 10em; */
   /* height: 4em; */
 }
 
@@ -166,8 +186,8 @@ body {
   max-width: 30em;
   height: 4em;
   /* 输入任务的框已经限定死是5em了 */
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
   margin-top: 0.2em;
   border: solid 0.1em #ccc;
   border-radius: 0.5em;
@@ -193,8 +213,13 @@ body {
   /* overflow-wrap: break-word; */
 }
 
-.son_task_text{
+.task_text{
   font-size: 0.8em;
+  
+}
+
+.son_task_text{
+  font-size: 0.6em;
 }
 
 div input {
@@ -219,6 +244,54 @@ div input {
   float: left;
   
 }  */
+
+/* 下面是放弃按键的css */
+.giveup_button{
+  border: none;
+  background: none;
+  /* float: right; */
+}
+/* 右边栏添加任务到今天的button的CSS */
+.add_task2today_button,.giveup_task_button,.add_task2tomorrow_button{
+  border: none;
+  background: none;
+}
+
+
+/* 下面是所有未完成任务列表的CSS */
+.goal_shown_and_edit{
+  margin-left: 1em;
+}
+.goal_li {
+  margin-left: 0%;
+  font-size: 1em;
+  
+  color: #FA9A39;
+}
+.project_li{
+  margin-left: 1em;
+  font-size: 0.8em;
+  color: #016565;
+  
+}
+.task_li{
+  margin-left: 2em;
+  border-top: #ddd;
+  border-bottom: #ddd;
+  color: black;
+  font-size: 0.6em;
+}
+
+.add_task2today_button {
+  /* position: relative;
+  float: right; */
+}
+
+.giveup_task_button{
+  /* position: relative; */
+  /* float: right; */
+}
+
 
 
 /* 下面是日历按键的css */
