--- a/static/css/taskmanage.css
+++ b/static/css/taskmanage.css
@@ -45,7 +45,7 @@ body {
     /* width:100%; */
   }
   #left,#right,#middle{
-     height:10000px; 
+     /* height:10000px;  */
      position:absolute;
     }
   #left{
@@ -65,7 +65,22 @@ body {
     background:#ccc; 
     left:309px; 
     width:auto;
+    
   }
+
+  .scrollbar {
+    /* margin-left: 30px; */
+    /* float: left; */
+    height: 500px;
+    /* width: 65px; */
+    /* background: #F5F5F5; */
+    overflow-y: scroll;
+    margin-bottom: 25px;
+}
+
+.force-overflow {
+  min-height: 450px;
+}
 
 /* 任务编辑区 */
 .right_shown_area{
