--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -399,7 +399,7 @@
   <div id="left" >
     <div class="list" id="today_task_area">
 
-      <div id="todaytree">
+      <div id="todaytree" style="width:600px">
         <h1>Today tasks</h1>
       </div>
   
@@ -410,7 +410,7 @@
         <div class="add_task_button" id="plusbutton" >
               <input id = "addtask_button" class="add_grandtask_button" type="image" src="https://test-1255367272.cos.ap-chengdu.myqcloud.com/plus.svg" alt="Submit" width="12" height="12">
         </div>
-      </li>
+  
     </div>
 
   </div>
