all ok in project work version

--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -30,8 +30,8 @@
 <!-- <link href="https://cdn.bootcdn.net/ajax/libs/chosen/1.4.1/chosen.css" rel="stylesheet"> -->
 
 <!-- JS -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.1.0/chosen.jquery.min.js"></script>
-
+<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.1.0/chosen.jquery.min.js"></script> -->
+<script type="text/javascript" src="/v1/chosen.js"></script>
 <!-- <script src="https://cdn.bootcdn.net/ajax/libs/chosen/1.8.8.rc6/chosen.proto.min.js"></script>\ -->
 <!-- <script src="https://cdn.bootcdn.net/ajax/libs/chosen/1.8.8.rc1/chosen.proto.js"></script> -->
 <!-- <script src="https://cdn.bootcdn.net/ajax/libs/chosen/1.4.1/chosen.jquery.min.js"></script> -->
