--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -837,7 +837,7 @@ function use_chosen_style(){
           dataType: "json",
           success: function (data) {       
             // alert(data); 
-            alert("我正在评价函数")
+            // alert("我正在评价函数")
             geteverydaytask();
             
             console.log(data)
