--- a/static/css/taskmanagebak.css
+++ b/static/css/taskmanagebak.css
@@ -66,8 +66,10 @@ body {
     background:#ccc; 
     left:50%; 
     height:100%;
-    width:auto;
+    /* width:auto; */
   }
+
+ 
 
   .scrollbar {
     /* margin-left: 30px; */
@@ -150,7 +152,10 @@ body {
   margin-left: 112px;
 } */
 
-
+/* #reviewalgo{
+  height: 150px;
+  background-color: #0f0f0f0f;
+} */
 
 
 /* 输入完成的任务的css */
