--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -302,8 +302,35 @@
 }
 
 
-.item {
+/* .item { */
+  /* background-color:red; */
+  /* background-image: linear-gradient(130deg, #6C52D9 0%, #1EAAFC 85%, #3EDFD7 100%); */
+  /* box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); */
+  /* color: yellow; */
+  /* border-radius: 10px; */
+  /* border: 6px solid #171717; */
+/* } */
+
+.goal_balgo {
   background-color:red;
+  /* background-image: linear-gradient(130deg, #6C52D9 0%, #1EAAFC 85%, #3EDFD7 100%); */
+  /* box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); */
+  /* color: yellow; */
+  border-radius: 10px;
+  /* border: 6px solid #171717; */
+}
+
+.review_balgo {
+  background-color:black;
+  /* background-image: linear-gradient(130deg, #6C52D9 0%, #1EAAFC 85%, #3EDFD7 100%); */
+  /* box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); */
+  /* color: yellow; */
+  border-radius: 10px;
+  /* border: 6px solid #171717; */
+}
+
+.tag_balgo {
+  background-color:blue;
   /* background-image: linear-gradient(130deg, #6C52D9 0%, #1EAAFC 85%, #3EDFD7 100%); */
   /* box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); */
   /* color: yellow; */
@@ -916,7 +943,8 @@ function show_tomorrow_tree(){
 
 // 先判断today或tomorrow再选择性展示
 function show_today_or_tomorrow_task(){
-  rebalance(["yellow","blue","black"])
+  rebalance(["white","white","white"])
+  loadlink()
   if (today_or_tomorrow == 1) {
     show_today_tree()
   }
