--- a/templates/reviewalgo.html
+++ b/templates/reviewalgo.html
@@ -198,8 +198,8 @@ function connect(url,switchofws) {
 //connect(localhostWebSocketurl)
  //connect('ws://localhost:777')
 // connect(httpsWebSocketurl)
-connect(localhostWebSocketurl,WebSocketswitch)
-
+// connect(localhostWebSocketurl,WebSocketswitch)
+connect(httpsWebSocketurl,WebSocketswitch)
 
 
 
