--- a/templates/user.html
+++ b/templates/user.html
@@ -42,9 +42,9 @@
   </form>
 </div>
 
-<div>
+<!-- <div>
   <button id="login_button">login</button>
-</div>
+</div> -->
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
