--- a/templates/user.html
+++ b/templates/user.html
@@ -42,11 +42,9 @@
   </form>
 </div>
 
-<!-- <div>
-  <button id="login_button">login</button>
-</div> -->
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdn.bootcss.com/jquery/3.1.1/jquery.js
+'></script>
 
     <!-- <script  src="/v1/index.js"></script> -->
 <script>
