time reload set

--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -2955,6 +2955,14 @@ $(document).on("mouseover","#task_reviewalgo_selector",function(){
     }
     );
 
+
+    setInterval(function(){ 
+      show_today_tree()
+      alert("正在间隔刷新")
+
+     }, 1*60000);
+
+
 </script>
    
      
