--- a/templates/taskmanager.html
+++ b/templates/taskmanager.html
@@ -2958,9 +2958,9 @@ $(document).on("mouseover","#task_reviewalgo_selector",function(){
 
     setInterval(function(){ 
       show_today_tree()
-      alert("正在间隔刷新")
+      // alert("正在间隔刷新")
 
-     }, 1*60000);
+     }, 100*60000);
 
 
 </script>
